# nova-forms

./: Cargo.toml  README.md
src/: components.rs  context.rs  datatypes.rs  form_context.rs  form_data.rs  hooks.rs  lib.rs  query_string.rs  server.rs  services.rs  wiring.rs
src/components/: address.rs  button.rs  checkbox.rs  choice.rs  cols.rs  dialog.rs  file_upload.rs  form_container.rs  group.rs  icon.rs  icon_button.rs  icon_select.rs  input.rs  language_select.rs  modal.rs  nova_form.rs  nova_form_wrapper.rs  pages.rs  preview.rs  print.rs  radio.rs  repeatable.rs  section.rs  select.rs  select_button.rs  summary.rs  toolbar.rs  wrapper.rs
src/datatypes/: accept.rs  date.rs  date_time.rs  email.rs  field.rs  iban.rs  non_empty_string.rs  phone.rs  postal_code.rs  regional_field.rs  telephone.rs  time.rs
src/hooks/: nova_forms_use.rs  use_sync.rs  use_zip_service.rs
src/server/: file_store.rs  pdf_gen.rs
src/services/: zip_service.rs
style/: app.css  main.css  print.css  variables.css
