[package]
name = "nova-forms"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6" }
leptos_router = { version = "0.6" }
leptos_meta = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["FileList", "File"] }
serde_qs = "0.13"
uuid  = { features = ["v4", "serde"], version = "1" }
headless_chrome = { version = "1", optional = true }
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["process", "fs", "io-util", "sync"], optional = true }
server_fn = { version = "0.6", features = ["multipart"] }

[features]
csr = ["leptos/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_router/hydrate", "leptos_meta/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:tokio",
]