[package]
name = "nova-forms"
version = "0.1.6"
edition = "2021"
description = "Build online forms with ease."
license = "MIT"
author = "Fabian Bösiger <boesiger.fabian@outlook.com>"
keywords = ["forms"]
repository = "https://github.com/fabianboesiger/nova-forms"
readme = "README.md"
homepage = "https://nova-forms.github.io"

[dependencies]
leptos = { version = "0.6" }
leptos_router = { version = "0.6" }
leptos_meta = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["FileList", "File"] }
js-sys = { version = "0.3" }
serde_qs = "0.13"
uuid  = { features = ["v4", "serde"], version = "1" }
headless_chrome = { version = "1", optional = true }
futures = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["process", "fs", "io-util", "sync"], optional = true }
server_fn = { version = "0.6", features = ["multipart"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "time"], optional = true }
leptos_i18n = "0.4"
regex = "1"
percent-encoding = "2"
leptos-use = { version = "0.13", features = ["storage"] }
codee = { version = "0.2" } 
time = { version = "0.3", features = ["serde", "parsing", "formatting", "local-offset", "wasm-bindgen"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
ustr = "1"
strum = { version = "0.26", features = ["derive"] }
itertools = "0.13"

[features]
csr = ["leptos/csr", "leptos_router/csr", "leptos_meta/csr"]
hydrate = ["leptos/hydrate", "leptos_router/hydrate", "leptos_meta/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:tokio",
    "dep:sqlx",
]
